tests/__snapshots__/feature-watch-config-file-has-an-error-stderr.snap.txt
Error: Value for the 'failFast' option must be a boolean.

  1 | {
  2 |   "failFast": "no",
    |               ~~~~
  3 |   "testFileMatch": [
  4 |     "**/isNumber.*"
  5 |   ]

      at ./tstyche.json:2:15

Error: Value for the 'failFast' option must be a boolean.

  1 | {
  2 |   "failFast": "yes",
    |               ~~~~~
  3 |   "testFileMatch": [
  4 |     "**/isString.*"
  5 |   ]

      at ./tstyche.json:2:15

Error: Value for the 'failFast' option must be a boolean.

  1 | {
  2 |   "failFast": "ok",
    |               ~~~~
  3 |   "testFileMatch": [
  4 |     "**/isString.*"
  5 |   ]

      at ./tstyche.json:2:15

